portfolio main- text and section updated

--- a/index.html
+++ b/index.html
@@ -93,101 +93,6 @@
               <span class="type-it"></span>
             </h1>
           </div>
-
-          <div class="col-12">
-            <!-- tablist -->
-            <div class="row">
-              <div class="col-md-4 col-12 mb-sm-0 mb-3">
-                <div class="list-group" id="list-tab" role="tablist">
-                  <a
-                    class="list-group-item list-group-item-action active"
-                    id="list-home-list"
-                    data-bs-toggle="list"
-                    href="#list-home"
-                    role="tab"
-                    aria-controls="home"
-                    >Leaning towards JavaScript</a
-                  >
-                  <a
-                    class="list-group-item list-group-item-action"
-                    id="list-profile-list"
-                    data-bs-toggle="list"
-                    href="#list-profile"
-                    role="tab"
-                    aria-controls="profile"
-                    >Web Developer</a
-                  >
-                  <a
-                    class="list-group-item list-group-item-action"
-                    id="list-messages-list"
-                    data-bs-toggle="list"
-                    href="#list-messages"
-                    role="tab"
-                    aria-controls="messages"
-                    >Front-End Developer</a
-                  >
-                  <a
-                    class="list-group-item list-group-item-action"
-                    id="list-settings-list"
-                    data-bs-toggle="list"
-                    href="#list-settings"
-                    role="tab"
-                    aria-controls="settings"
-                    >Bootcamp</a
-                  >
-                </div>
-              </div>
-              <div class="col-sm-8 col-12">
-                <div class="tab-content" id="nav-tabContent">
-                  <div
-                    class="tab-pane fade show active"
-                    id="list-home"
-                    role="tabpanel"
-                    aria-labelledby="list-home-list"
-                  >
-                    1. Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-                    sed do eiusmod tempor incididunt ut labore et dolore magna
-                    aliqua. Ut enim ad minim veniam, quis nostrud exercitation
-                    ullamco laboris nisi ut aliquip ex ea commodo consequat.
-                  </div>
-                  <div
-                    class="tab-pane fade"
-                    id="list-profile"
-                    role="tabpanel"
-                    aria-labelledby="list-profile-list"
-                  >
-                    2. Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-                    sed do eiusmod tempor incididunt ut labore et dolore magna
-                    aliqua. Ut enim ad minim veniam, quis nostrud exercitation
-                    ullamco laboris nisi ut aliquip ex ea commodo consequat.
-                  </div>
-                  <div
-                    class="tab-pane fade"
-                    id="list-messages"
-                    role="tabpanel"
-                    aria-labelledby="list-messages-list"
-                  >
-                    3. Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-                    sed do eiusmod tempor incididunt ut labore et dolore magna
-                    aliqua. Ut enim ad minim veniam, quis nostrud exercitation
-                    ullamco laboris nisi ut aliquip ex ea commodo consequat.
-                  </div>
-                  <div
-                    class="tab-pane fade"
-                    id="list-settings"
-                    role="tabpanel"
-                    aria-labelledby="list-settings-list"
-                  >
-                    4. Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-                    sed do eiusmod tempor incididunt ut labore et dolore magna
-                    aliqua. Ut enim ad minim veniam, quis nostrud exercitation
-                    ullamco laboris nisi ut aliquip ex ea commodo consequat.
-                  </div>
-                </div>
-              </div>
-            </div>
-            <!-- tablist end -->
-          </div>
         </div>
         <!--projects start-->
         <div class="row justify-content-center">
@@ -341,6 +246,126 @@
               <!-- some cards end -->
             </div>
           </div>
+          <div class="col-12 my-5">
+            <!-- tablist -->
+            <div class="row">
+              <div class="col-md-4 col-12 mb-sm-0 mb-3">
+                <div class="list-group" id="list-tab" role="tablist">
+                  <a
+                    class="list-group-item list-group-item-action active"
+                    id="list-home-list"
+                    data-bs-toggle="list"
+                    href="#list-now"
+                    role="tab"
+                    aria-controls="now"
+                    >Leaning towards JavaScript</a
+                  >
+                  <a
+                    class="list-group-item list-group-item-action"
+                    id="list-wd-list"
+                    data-bs-toggle="list"
+                    href="#list-wd"
+                    role="tab"
+                    aria-controls="wd"
+                    >Web Developer</a
+                  >
+                  <a
+                    class="list-group-item list-group-item-action"
+                    id="list-fed-list"
+                    data-bs-toggle="list"
+                    href="#list-fed"
+                    role="tab"
+                    aria-controls="fed"
+                    >Front-End Developer</a
+                  >
+                  <a
+                    class="list-group-item list-group-item-action"
+                    id="list-bootcamp-list"
+                    data-bs-toggle="list"
+                    href="#list-bootcamp"
+                    role="tab"
+                    aria-controls="bootcamp"
+                    >Bootcamp</a
+                  >
+                </div>
+              </div>
+              <div class="col-md-8 col-12 pt-md-0 pt-3">
+                <div class="tab-content" id="nav-tabContent">
+                  <div
+                    class="tab-pane fade show active"
+                    id="list-now"
+                    role="tabpanel"
+                    aria-labelledby="list-now-list"
+                  >
+                    <h2>4.</h2>
+                    <p>
+                      These days i am focusing on javascript and react
+                      framework, building projects with the real purpose, even
+                      if that purpose is entertainment :). I also like building
+                      things that can be useful and make life easier, like
+                      <a
+                        target="_blank"
+                        href="https://xanoosh.github.io/portfolio/recipe-api"
+                        >whats in my fridge app</a
+                      >.
+                    </p>
+                  </div>
+                  <div
+                    class="tab-pane fade"
+                    id="list-wd"
+                    role="tabpanel"
+                    aria-labelledby="list-wd-list"
+                  >
+                    <h2>3.</h2>
+                    <p>
+                      My second job was in DNS Group, where i also created
+                      custom Wordpress themes. It was a small company, so my
+                      work was more independent which means i had more
+                      responsibilities (creating visually appealing websites,
+                      contact with a client, discussing changes). Most of the
+                      projects i created had to be comptible for SEO, so i had
+                      to learn some SEO principles.
+                    </p>
+                  </div>
+                  <div
+                    class="tab-pane fade"
+                    id="list-fed"
+                    role="tabpanel"
+                    aria-labelledby="list-fed-list"
+                  >
+                    <h2>2.</h2>
+                    <p>
+                      At my first job in Page Interactive i was working with a
+                      team of web designers and developers. We created custom
+                      Wordpress themes for various clients. We put a lot of
+                      effort to build web applications with attention to detail,
+                      as my boss was graphic designer himself. There i developed
+                      aestethic approach to projects we create and SOMETHING
+                      MORE?
+                    </p>
+                  </div>
+                  <div
+                    class="tab-pane fade"
+                    id="list-bootcamp"
+                    role="tabpanel"
+                    aria-labelledby="list-bootcamp-list"
+                  >
+                    <h2>1.</h2>
+                    <p>
+                      I finished a Front End Developer bootcamp in Coder's Lab
+                      school. There i learned a lot about web development. I
+                      mostly learned front end technologies, but we also were
+                      taught PHP and mySQL basics, to give us solid foundation
+                      in web development as a whole.
+                    </p>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <!-- tablist end -->
+          </div>
+        </div>
+        <div class="row mt-5">
           <div class="img-container col-md-3 col-6 mb-md-3 mb-5">
             <img class="" src="main/img/react-logo.png" alt="react" />
           </div>
