--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
         </div>
         <!--projects start-->
         <div class="row justify-content-center">
-          <div class="col-12 my-5">
+          <div class="col-12 mb-5">
             <div class="row">
               <!-- some cards start -->
               <div class="col-lg-4 col-sm-6 mb-4">
