portfolio main- minor text update

--- a/index.html
+++ b/index.html
@@ -301,8 +301,9 @@
                     <p>
                       These days i am focusing on javascript and react
                       framework, building projects with the real purpose, even
-                      if that purpose is entertainment :). I also like building
-                      things that can be useful and make life easier, like
+                      if that purpose is entertainment :).<br />
+                      I also like building things that can be useful and make
+                      life easier, like
                       <a
                         target="_blank"
                         href="https://xanoosh.github.io/portfolio/recipe-api"
@@ -322,9 +323,9 @@
                       custom Wordpress themes. It was a small company, so my
                       work was more independent which means i had more
                       responsibilities (creating visually appealing websites,
-                      contact with a client, discussing changes). Most of the
-                      projects i created had to be comptible for SEO, so i had
-                      to learn some SEO principles.
+                      contact with a client, discussing changes).<br />
+                      Most of the projects i created had to be comptible for
+                      SEO, so i had to learn some SEO principles.
                     </p>
                   </div>
                   <div
@@ -337,11 +338,11 @@
                     <p>
                       At my first job in Page Interactive i was working with a
                       team of web designers and developers. We created custom
-                      Wordpress themes for various clients. We put a lot of
-                      effort to build web applications with attention to detail,
-                      as my boss was graphic designer himself. There i developed
-                      aestethic approach to projects we create and SOMETHING
-                      MORE?
+                      Wordpress themes for various clients.<br />
+                      We put a lot of effort to build web applications with
+                      attention to detail, as my boss was graphic designer
+                      himself. There i developed aestethic approach to projects
+                      we create and improved my skills in general.
                     </p>
                   </div>
                   <div
@@ -353,8 +354,8 @@
                     <h2>1.</h2>
                     <p>
                       I finished a Front End Developer bootcamp in Coder's Lab
-                      school. There i learned a lot about web development. I
-                      mostly learned front end technologies, but we also were
+                      school. There i learned a lot about web development.<br />
+                      I mostly learned front end technologies, but we also were
                       taught PHP and mySQL basics, to give us solid foundation
                       in web development as a whole.
                     </p>
