--- a/dice/index.html
+++ b/dice/index.html
@@ -51,7 +51,7 @@
         class="dice hidden"
       />
       <button class="btn btn--new">New game</button>
-      <button class="btn btn--roll">Roll dice</button>
+      <button class="btn btn--roll">Roll <span>dice</span></button>
       <button class="btn btn--hold">Hold</button>
       <button class="btn btn--how">How does it work?</button>
     </main>
