small text adjustments

--- a/index.html
+++ b/index.html
@@ -321,11 +321,11 @@
                     <p>
                       My second job was in DNS Group, where i also created
                       custom Wordpress themes. It was a small company, so my
-                      work was more independent which means i had more
+                      work was more independent. Aside from the usual i had
                       responsibilities (creating visually appealing websites,
                       contact with a client, discussing changes).<br />
-                      Most of the projects i created had to be comptible for
-                      SEO, so i had to learn some SEO principles.
+                      Most of the projects i created had to be compatible for
+                      SEO, so i had to learn SEO principles.
                     </p>
                   </div>
                   <div
@@ -342,7 +342,7 @@
                       We put a lot of effort to build web applications with
                       attention to detail, as my boss was graphic designer
                       himself. There i developed aestethic approach to projects
-                      we create and improved my skills in general.
+                      i create and improved my skills in general.
                     </p>
                   </div>
                   <div
