small text adjustments

--- a/index.html
+++ b/index.html
@@ -321,9 +321,10 @@
                     <p>
                       My second job was in DNS Group, where i also created
                       custom Wordpress themes. It was a small company, so my
-                      work was more independent. Aside from the usual i had
-                      responsibilities (creating visually appealing websites,
-                      contact with a client, discussing changes).<br />
+                      work was more independent. Aside from the usual web
+                      evelopment i had less obvious responsibilities (creating
+                      visually appealing layouts, contact with a client,
+                      discussing changes).<br />
                       Most of the projects i created had to be compatible for
                       SEO, so i had to learn SEO principles.
                     </p>
