text rearranging, typos

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
               <div class="col-lg-4 col-sm-6 mb-4">
                 <div class="card" data-aos="fade-up">
                   <div class="card-body">
-                    <h5 class="card-title">"What's in my fridge" App</h5>
+                    <h5 class="card-title">"What's in my fridge"</h5>
                     <div class="mb-3">
                       <span class="tag">REST API</span>
                       <span class="tag">ES6</span>
@@ -299,15 +299,27 @@
                   >
                     <h2>4.</h2>
                     <p>
-                      These days i am focusing on javascript and react
-                      framework, building projects with the real purpose, even
-                      if that purpose is entertainment :).<br />
-                      I also like building things that can be useful and make
-                      life easier, like
+                      These days i am focusing on vanilla javascript and react
+                      framework, building projects which can be useful or just
+                      entertaining, for example<br />
+                      <a
+                        target="_blank"
+                        href="https://xanoosh.github.io/portfolio/memo"
+                        >Memory</a
+                      >
+                      or
+                      <a
+                        target="_blank"
+                        href="https://xanoosh.github.io/portfolio/quiz-api"
+                        >Quiz</a
+                      >.
+                      <br />
+                      I also like building things that can make life easier,
+                      like<br />
                       <a
                         target="_blank"
                         href="https://xanoosh.github.io/portfolio/recipe-api"
-                        >whats in my fridge app</a
+                        >Whats in my fridge app</a
                       >.
                     </p>
                   </div>
@@ -319,12 +331,12 @@
                   >
                     <h2>3.</h2>
                     <p>
-                      My second job was in DNS Group, where i also created
-                      custom Wordpress themes. It was a small company, so my
-                      work was more independent. Aside from the usual web
-                      evelopment i had less obvious responsibilities (creating
-                      visually appealing layouts, contact with a client,
-                      discussing changes).<br />
+                      My second job was in DNS Group, where i created Wordpress
+                      themes. It was a small company and my work was more
+                      independent. Aside from the usual web development i had
+                      additional responsibilities (creating visually appealing
+                      layouts, contact with a client, discussing new
+                      features).<br />
                       Most of the projects i created had to be compatible for
                       SEO, so i had to learn SEO principles.
                     </p>
@@ -343,7 +355,7 @@
                       We put a lot of effort to build web applications with
                       attention to detail, as my boss was graphic designer
                       himself. There i developed aestethic approach to projects
-                      i create and improved my skills in general.
+                      and improved my skills in general.
                     </p>
                   </div>
                   <div
@@ -356,9 +368,10 @@
                     <p>
                       I finished a Front End Developer bootcamp in Coder's Lab
                       school. There i learned a lot about web development.<br />
-                      I mostly learned front end technologies, but we also were
-                      taught PHP and mySQL basics, to give us solid foundation
-                      in web development as a whole.
+                      I mostly learned front end technologies, like HTML, CSS
+                      and JavaScript, but we also were taught PHP and mySQL
+                      basics, to give us solid foundation in web development as
+                      a whole.
                     </p>
                   </div>
                 </div>
