--- a/snake/index.html
+++ b/snake/index.html
@@ -11,7 +11,13 @@
     <title>snake</title>
   </head>
   <body>
-    <div id="board"></div>
+    <div id="board">
+      <div class="overlay"></div>
+      <div class="game-over">
+        <h2>game over</h2>
+        <button id="restart">restart</button>
+      </div>
+    </div>
     <script src="snake-script.js"></script>
   </body>
 </html>
