snake added to portfolio

--- a/index.html
+++ b/index.html
@@ -76,6 +76,14 @@
               <a
                 class="nav-link"
                 target="_blank"
+                href="https://xanoosh.github.io/portfolio/snake/"
+                >Snake</a
+              >
+            </li>
+            <li class="nav-item">
+              <a
+                class="nav-link"
+                target="_blank"
                 href="https://xanoosh.github.io/portfolio/map-generator"
                 >Map Generator</a
               >
@@ -212,6 +220,31 @@
                       <a
                         target="_blank"
                         href="https://xanoosh.github.io/portfolio/dice"
+                        class="btn btn-primary"
+                        >Link</a
+                      >
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="col-lg-4 col-sm-6 mb-4">
+                <div class="card" data-aos="fade-up">
+                  <div class="card-body">
+                    <h5 class="card-title">Snake</h5>
+                    <div class="mb-3">
+                      <span class="tag">ES6</span>
+                      <span class="tag">HTML</span>
+                      <span class="tag">CSS</span>
+                    </div>
+                    <p class="card-text">
+                      <strong>WORK IN PROGRESS, DESKTOP ONLY</strong>
+                      Oldschool snake game, use arrow keys to move. Still a
+                      little buggy.
+                    </p>
+                    <div class="btn-container">
+                      <a
+                        target="_blank"
+                        href="https://xanoosh.github.io/portfolio/snake/"
                         class="btn btn-primary"
                         >Link</a
                       >
