snake text changes

--- a/index.html
+++ b/index.html
@@ -332,15 +332,19 @@
                   >
                     <h2>4.</h2>
                     <p>
-                      These days i am focusing on vanilla javascript and react
+                      These days I am focusing on vanilla javascript and react
                       framework, building projects which can be useful or just
-                      entertaining, for example<br />
+                      entertaining, for example
                       <a
                         target="_blank"
                         href="https://xanoosh.github.io/portfolio/memo"
                         >Memory</a
-                      >
-                      or
+                      >,
+                      <a
+                        target="_blank"
+                        href="https://xanoosh.github.io/portfolio/snake"
+                        >Snake</a
+                      >, or
                       <a
                         target="_blank"
                         href="https://xanoosh.github.io/portfolio/quiz-api"
@@ -348,12 +352,14 @@
                       >.
                       <br />
                       I also like building things that can make life easier,
-                      like<br />
+                      like
                       <a
                         target="_blank"
                         href="https://xanoosh.github.io/portfolio/recipe-api"
                         >Whats in my fridge app</a
-                      >.
+                      >.<br />
+                      I like the way that simple idea can come to life if you
+                      just spend some time and effort to code it.
                     </p>
                   </div>
                   <div
