--- a/index.html
+++ b/index.html
@@ -358,7 +358,7 @@
                         href="https://xanoosh.github.io/portfolio/recipe-api"
                         >Whats in my fridge app</a
                       >.<br />
-                      I like the way that simple idea can come to life if you
+                      I like the way that simple idea can come to life, if you
                       just spend some time and effort to code it.
                     </p>
                   </div>
