text changes, typos

--- a/index.html
+++ b/index.html
@@ -370,14 +370,14 @@
                   >
                     <h2>3.</h2>
                     <p>
-                      My second job was in DNS Group, where i created Wordpress
+                      My second job was in DNS Group, where I created Wordpress
                       themes. It was a small company and my work was more
-                      independent. Aside from the usual web development i had
+                      independent. Aside from the usual web development, I had
                       additional responsibilities (creating visually appealing
                       layouts, contact with a client, discussing new
                       features).<br />
-                      Most of the projects i created had to be compatible for
-                      SEO, so i had to learn SEO principles.
+                      Most of the projects I created had to be compatible for
+                      SEO, so I had to learn SEO principles.
                     </p>
                   </div>
                   <div
@@ -388,12 +388,12 @@
                   >
                     <h2>2.</h2>
                     <p>
-                      At my first job in Page Interactive i was working with a
+                      At my first job in Page Interactive I was working with a
                       team of web designers and developers. We created custom
                       Wordpress themes for various clients.<br />
                       We put a lot of effort to build web applications with
                       attention to detail, as my boss was graphic designer
-                      himself. There i developed aestethic approach to projects
+                      himself. There I developed aestethic approach to projects
                       and improved my skills in general.
                     </p>
                   </div>
@@ -406,7 +406,7 @@
                     <h2>1.</h2>
                     <p>
                       I finished a Front End Developer bootcamp in Coder's Lab
-                      school. There i learned a lot about web development.<br />
+                      school. It was my starting point in web development.<br />
                       I mostly learned front end technologies, like HTML, CSS
                       and JavaScript, but we also were taught PHP and mySQL
                       basics, to give us solid foundation in web development as
