--- a/time-zones/index.html
+++ b/time-zones/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" href="time-zones-style.css" />
-    <title>Game od dice</title>
+    <title>Time zones</title>
   </head>
   <body>
     <div id="container">
