time zones project calculate change in hours

--- a/time-zones/index.html
+++ b/time-zones/index.html
@@ -11,11 +11,11 @@
     <div id="container">
       <label for="time-berlin">
         <span>Berlin:</span>
-        <input type="time" id="time-tokio" name="Berlin" step="2" />
+        <input type="time" id="time-tokio" name="Berlin" />
       </label>
       <label for="time-tokio">
         <span>Tokio:</span>
-        <input type="time" id="time-tokio" name="Tokio" step="2" />
+        <input type="time" id="time-tokio" name="Tokio" />
       </label>
     </div>
     <script src="time-zones-script.js"></script>
