time zones project wokring on unified calculation

--- a/time-zones/index.html
+++ b/time-zones/index.html
@@ -9,9 +9,13 @@
   </head>
   <body>
     <div id="container">
+      <label for="time-moscow">
+        <span>New York:</span>
+        <input type="time" id="time-new-york" name="New York" />
+      </label>
       <label for="time-berlin">
         <span>Berlin:</span>
-        <input type="time" id="time-tokio" name="Berlin" />
+        <input type="time" id="time-berlin" name="Berlin" />
       </label>
       <label for="time-tokio">
         <span>Tokio:</span>
