time zones project constructing date obj from input hour

--- a/time-zones/index.html
+++ b/time-zones/index.html
@@ -9,9 +9,13 @@
   </head>
   <body>
     <div id="container">
-      <label for="time-moscow">
+      <label for="time-new-york">
         <span>New York:</span>
         <input type="time" id="time-new-york" name="New York" />
+      </label>
+      <label for="time-delhi">
+        <span>Delhi:</span>
+        <input type="time" id="time-delhi" name="Delhi" />
       </label>
       <label for="time-berlin">
         <span>Berlin:</span>
