time zone app added to main portfolio

--- a/index.html
+++ b/index.html
@@ -84,6 +84,14 @@
               <a
                 class="nav-link"
                 target="_blank"
+                href="https://xanoosh.github.io/portfolio/time-zones/"
+                >TimeZones</a
+              >
+            </li>
+            <li class="nav-item">
+              <a
+                class="nav-link"
+                target="_blank"
                 href="https://xanoosh.github.io/portfolio/map-generator"
                 >Map Generator</a
               >
@@ -245,6 +253,31 @@
                       <a
                         target="_blank"
                         href="https://xanoosh.github.io/portfolio/snake/"
+                        class="btn btn-primary"
+                        >Link</a
+                      >
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="col-lg-4 col-sm-6 mb-4">
+                <div class="card" data-aos="fade-up">
+                  <div class="card-body">
+                    <h5 class="card-title">TimeZone app</h5>
+                    <div class="mb-3">
+                      <span class="tag">REST API</span>
+                      <span class="tag">ES6</span>
+                      <span class="tag">HTML</span>
+                      <span class="tag">CSS</span>
+                    </div>
+                    <p class="card-text">
+                      Simple app that calculates time in different time zones on
+                      input change. Consumes data from API on load.
+                    </p>
+                    <div class="btn-container">
+                      <a
+                        target="_blank"
+                        href="https://xanoosh.github.io/portfolio/time-zones"
                         class="btn btn-primary"
                         >Link</a
                       >
