time zone app fixed tokio time zone

--- a/time-zones/index.html
+++ b/time-zones/index.html
@@ -27,7 +27,7 @@
       </label>
       <label for="time-tokio">
         <span>Tokio:</span>
-        <input type="time" id="time-tokio" name="Tokio" />
+        <input type="time" id="time-tokio" name="Tokio/Japan" />
       </label>
     </div>
     <script src="time-zones-script.js"></script>
