--- a/time-zones/index.html
+++ b/time-zones/index.html
@@ -29,6 +29,11 @@
         <span>Tokio:</span>
         <input type="time" id="time-tokio" name="Tokio/Japan" />
       </label>
+      <form id="form">
+        <input type="text" placeholder="type city" />
+        <input type="text" placeholder="type country" />
+        <input type="submit" value="Add" />
+      </form>
     </div>
     <script src="time-zones-script.js"></script>
   </body>
