--- a/time-zones/index.html
+++ b/time-zones/index.html
@@ -32,7 +32,7 @@
       <form id="form">
         <input type="text" placeholder="type city" />
         <input type="text" placeholder="type country" />
-        <input type="submit" value="Add" />
+        <input type="submit" value="Add new timezone" />
       </form>
     </div>
     <script src="time-zones-script.js"></script>
