--- a/snake2/index.html
+++ b/snake2/index.html
@@ -16,6 +16,7 @@
   </head>
   <body>
     <div id="board">
+      <div id="score">0</div>
       <div class="overlay"></div>
       <div class="game-over">
         <h2>game over</h2>
