snake vs linked as a porojsect

--- a/index.html
+++ b/index.html
@@ -245,9 +245,9 @@
                       <span class="tag">CSS</span>
                     </div>
                     <p class="card-text">
-                      <strong>WORK IN PROGRESS, DESKTOP ONLY</strong>
-                      Oldschool snake game, use arrow keys to move. Still a
-                      little buggy.
+                      <strong>DESKTOP ONLY</strong>
+                      Oldschool snake game, use arrow keys to move. Snake gets
+                      faster progressively.
                     </p>
                     <div class="btn-container">
                       <a
