--- a/snake_old/index.html
+++ b/snake_old/index.html
@@ -11,18 +11,17 @@
       href="https://fonts.googleapis.com/css2?family=Noto+Sans:wght@400;700&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="snake2-style.css" />
-    <title>snake2</title>
+    <link rel="stylesheet" href="snake-style.css" />
+    <title>snake</title>
   </head>
   <body>
     <div id="board">
-      <div id="score">0</div>
       <div class="overlay"></div>
       <div class="game-over">
         <h2>game over</h2>
         <button id="restart">restart</button>
       </div>
     </div>
-    <script src="snake2-script.js"></script>
+    <script src="snake-script.js"></script>
   </body>
 </html>
