--- a/snake/index.html
+++ b/snake/index.html
@@ -12,10 +12,11 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="snake-style.css" />
-    <title>snake</title>
+    <title>snake2</title>
   </head>
   <body>
     <div id="board">
+      <div id="score">0</div>
       <div class="overlay"></div>
       <div class="game-over">
         <h2>game over</h2>
