--- a/snake/index.html
+++ b/snake/index.html
@@ -12,7 +12,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="snake-style.css" />
-    <title>snake2</title>
+    <title>Snake</title>
   </head>
   <body>
     <div id="board">
