toggler js implementation

--- a/time-zones/index.html
+++ b/time-zones/index.html
@@ -12,14 +12,14 @@
     <title>Time zones</title>
   </head>
   <body>
-    <button class="form-btn">Add timezone</button>
-    <div class="overlay hidden">
+    <button id="form-toggler">Add timezone</button>
+    <div id="overlay" class="hidden">
       <div class="form-container">
         <div id="close">&times;</div>
         <form id="form">
           <input type="text" placeholder="type city" />
           <input type="text" placeholder="type country" />
-          <input type="submit" value="Add new timezone" />
+          <input type="submit" value="Add" />
         </form>
       </div>
     </div>
