--- a/time-zones/index.html
+++ b/time-zones/index.html
@@ -13,12 +13,18 @@
   </head>
   <body>
     <button id="form-toggler">Add timezone</button>
-    <div id="overlay" class="hidden">
+    <!-- add class hidden to overlay -->
+    <div id="overlay" class="">
       <div class="form-container">
         <div id="close">&times;</div>
         <form id="form">
-          <input type="text" placeholder="type city" />
-          <input type="text" placeholder="type country" />
+          <label>
+            <input type="text" placeholder="type city" />
+          </label>
+          <label>
+            <input type="text" placeholder="type country" />
+          </label>
+
           <input type="submit" value="Add" />
         </form>
       </div>
