wormking on algorithm to find optimal hour range for all timezones

--- a/time-zones/index.html
+++ b/time-zones/index.html
@@ -13,6 +13,7 @@
   </head>
   <body>
     <button id="form-toggler">Add timezone</button>
+    <button id="find-optimal-time">Optimal time</button>
     <div id="overlay" class="hidden">
       <div class="form-container">
         <div id="close">&times;</div>
