working on hour setting

--- a/time-zones-dev/index.html
+++ b/time-zones-dev/index.html
@@ -60,14 +60,15 @@
       </label>
     </div>
     <div class="avoid">
-      <div class="hours">
-        <div id="hours-to-avoid">1</div>
+      <p>Hour to avoid:</p>
+      <div id="hours" value="hours">
+        <div class="avoid-value">01</div>
         <div class="add"></div>
         <div class="substract"></div>
       </div>
       :
-      <div class="minutes">
-        <div id="minutes-to-avoid">30</div>
+      <div id="minutes" value="minutes">
+        <div class="avoid-value">30</div>
         <div class="add"></div>
         <div class="substract"></div>
       </div>
