updated version pushed to main folder

--- a/time-zone_old/index.html
+++ b/time-zone_old/index.html
@@ -13,7 +13,7 @@
   </head>
   <body>
     <button id="form-toggler">Add timezone</button>
-    <button id="find-optimal-time">Find Optimal time</button>
+    <button id="find-optimal-time">Optimal time</button>
     <div id="overlay" class="hidden">
       <div class="form-container">
         <div id="close">&times;</div>
@@ -58,14 +58,6 @@
         <span>Seattle:</span>
         <input type="time" id="time-seattle" name="Seattle/usa" />
       </label>
-    </div>
-    <div class="avoid">
-      <p>Hour to avoid:</p>
-      <div id="hours" value="hours">
-        <div class="avoid-value">01</div>
-        <div class="add"></div>
-        <div class="substract"></div>
-      </div>
     </div>
     <script src="time-zones-script.js"></script>
   </body>
