css mobile optimization

--- a/time-zones/index.html
+++ b/time-zones/index.html
@@ -13,7 +13,7 @@
   </head>
   <body>
     <button id="form-toggler">Add timezone</button>
-    <button id="find-optimal-time">Find Optimal time</button>
+    <button id="find-optimal-time">Calculate</button>
     <div id="overlay" class="hidden">
       <div class="form-container">
         <div id="close">&times;</div>
@@ -37,10 +37,6 @@
       <label for="time-bejing">
         <span>Bejing:</span>
         <input type="time" id="time-bejing" name="Bejing/China" />
-      </label>
-      <label for="time-singapore">
-        <span>Singapore:</span>
-        <input type="time" id="time-singapore" name="Singapore" />
       </label>
       <label for="time-delhi">
         <span>Delhi:</span>
